@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-04-26T01:17:16Z",
+  "timestamp" : "2025-04-27T01:24:23Z",
   "count_outdated" : 1827,
   "uniques_outdated" : 1068,
-  "count" : 1838,
-  "uniques" : 1079,
+  "count" : 1839,
+  "uniques" : 1080,
   "clones" : [
     {
       "timestamp": "2025-04-13T00:00:00Z",
@@ -79,6 +79,15 @@
     },
     {
       "timestamp": "2025-04-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-26T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
