@@ -1,5 +1,5 @@
 {
-  "count": 11,
+  "count": 12,
   "uniques": 4,
   "clones": [
     {
@@ -44,6 +44,11 @@
     },
     {
       "timestamp": "2025-04-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-04-26T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
